--- a/components/StaggeredMenu.css
+++ b/components/StaggeredMenu.css
@@ -31,7 +31,7 @@
 
 .sm-logo-img {
   display: block;
-  height: 32px;
+  height: 70px;
   width: auto;
   object-fit: contain;
 }
@@ -165,6 +165,21 @@
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
+}
+
+/* --- Fix sideways scroll --- */
+html, body {
+  overflow-x: hidden;
+}
+
+.staggered-menu-wrapper {
+  overflow-x: hidden;
+}
+
+.staggered-menu-panel,
+.sm-prelayers {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .sm-socials {
