--- a/components/StaggeredMenu.css
+++ b/components/StaggeredMenu.css
@@ -44,7 +44,7 @@
   background: transparent;
   border: none;
   cursor: pointer;
-  color: #e9e9ef;
+  color: #151518;
   font-weight: 500;
   line-height: 1;
   overflow: visible;
@@ -181,6 +181,7 @@ html, body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+/* hid this ugly white rectangle ^^^*/
 
 .sm-socials {
   margin-top: auto;
